--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_home">主页</string>
     <string name="title_information">资讯</string>
     <string name="title_more">更多</string>
+
+    <string name="title_takephoto">拍照</string>
 </resources>
